--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./assets/background.jpg");
+  /* background-image: url("./assets/background.jpg"); */
   background-size: cover;
 }
 
@@ -24,7 +24,7 @@ code {
   height: 100%;
 }
 
-/* #map {
-  width: 100%;
-  height: 100%;
-} */
+.button-link {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
